debut de journée

--- a/GameSquadMVC/includes/core/views/form_contact.phtml
+++ b/GameSquadMVC/includes/core/views/form_contact.phtml
@@ -14,7 +14,7 @@ require_once 'includes/core/globals.php';
     <main>
 
         <form class="formContact" action="" method="POST">
-            <h3>CONTACT NOUS :</h3>
+            <h3>CONTACTEZ NOUS :</h3>
             <div class="nom">
                 <label for="name">Nom</label>
                 <input type="text" name="name" id="name" placeholder="Nom" required>
@@ -28,7 +28,6 @@ require_once 'includes/core/globals.php';
                 <input type="email" name="email" id="email" placeholder="Email" required>
             </div>
 
-            <label for="message">Message</label>
             <textarea name="message" id="message" cols="30" rows="10" placeholder=" Votre message" required></textarea>
             <input type="submit" value="Envoyer">
         </form>
