--- a/GameSquadMVC/public/styles/style.css
+++ b/GameSquadMVC/public/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    height: 100VH;
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -312,10 +312,16 @@ input[type="submit"]:hover {
 }
 /* ------ FORMULAIRE DE CONTACT ------ */
     textarea {
+        font-family: sofiaR;
+        font-size: 1.2rem;
+        color: #f7f7f7;
         background: rgba(75, 75, 75, 0.52);
         border: none;
         border-radius: 16px;
-
+        min-width: 300px;
+        height: 150px;
+        margin: 0.5rem;
+        padding: 0.5rem;
     }
     textarea:focus {
     outline-color: #dc8150;
