debut de journée

--- a/GameSquadMVC/includes/partials/footerUser.phtml
+++ b/GameSquadMVC/includes/partials/footerUser.phtml
@@ -1,5 +1,5 @@
 <footer>
-    <a href="index.php?page=index"><img src="./public/medias/img/logoDW.png" alt="logo GAMESQUAD"></a>
+    <a href="index.php?page=user"><img src="./public/medias/img/logoDW.png" alt="logo GAMESQUAD"></a>
     <ul>
         <li><a href="index.php?page=index&action=contact">CONTACT</a></li>
         <li><a href="">F.A.Q</a></li>
