--- a/GameSquadMVC/includes/partials/navbar.phtml
+++ b/GameSquadMVC/includes/partials/navbar.phtml
@@ -4,14 +4,16 @@
     </div>
     <div class="menu">
         <ul>
-            <li><a href="index.php?page=session&action=add">CREER UNE SQUAD</a></li>
+            <li><a href="index.php?page=session&action=add">CRÉER UNE SQUAD</a></li>
             <li><a href="index.php?page=session&action=search">TROUVER UNE SQUAD</a></li>
         </ul>
     </div>
     <div class="burger">
         <div class="user"><i class="fa-solid fa-circle-user"></i></div>
         <div class="pseudo">
+
             <?php
+
             echo $_SESSION['user']->getPseudo();
             ?>
         </div>
