--- a/GameSquadMVC/public/styles/style.css
+++ b/GameSquadMVC/public/styles/style.css
@@ -253,7 +253,7 @@ form div{
 }
 /*mettre le fond de mon formulaire en blanc*/
 
-input {
+input, select {
     border-radius: 5px;
     border: none;
     padding: 0.5rem;
@@ -323,6 +323,23 @@ input[type="submit"]:hover {
         margin: 0.5rem;
         padding: 0.5rem;
     }
+    #mailSend {
+        position: absolute;
+        transform: translate(-50%, -50%);
+        top: 6%;
+        left: 50%;
+        text-align: center;
+        padding: 1rem;
+        margin: auto;
+        font-size: 1.5rem;
+        font-family: sofiaSBI;
+        color: #dc8150;
+        background: #f7f7f7;
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(17.4px);
+        border: 1px solid rgba(75, 75, 75, 0.28);
+    }
     textarea:focus {
     outline-color: #dc8150;
 }
@@ -331,8 +348,61 @@ input[type="submit"]:hover {
 
 /* ------ FORMULAIRE CONNEXION ------ */
 .bodyCon {
-    height: 100vh;
+    height: 100%;
 }
+
+/* ------ PROFIL PAGE ------ */
+fieldset {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     padding: 1.8rem;
+     margin: 2rem auto;
+     font-family: sofiaM;
+     color: #f7f7f7;
+     background: rgba(75, 75, 75, 0.52);
+     border-radius: 16px;
+     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+     backdrop-filter: blur(17.4px);
+     -webkit-backdrop-filter: blur(17.4px);
+     border: 1px solid rgba(75, 75, 75, 0.28);
+
+}
+fieldset p{
+    font-size: 1.5rem;
+    font-family: sofiaSBI;
+    color: #f7f7f7;
+    margin: 1rem;
+}
+legend {
+    font-size: 2.5rem;
+    font-family: sofiaSBI;
+    color: #dc8150;
+
+    text-align: center;
+}
+.btnModSup{
+    padding: 1rem;
+    margin: 1rem;
+    font-size: 1.5rem;
+    font-family: sofiaSBI;
+    color: #dc8150;
+    background: #f7f7f7;
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(17.4px);
+    -webkit-backdrop-filter: blur(17.4px);
+    border: 1px solid rgba(75, 75, 75, 0.28);
+}
+.btnModSup:hover {
+    background-color: #dc8150;
+    color: #f7f7f7;
+    cursor: pointer;
+}
+
+/* ------ FORMULAIRE NEW SESSION ------ */
+
 
 /* MEDIA QUERIES */
 
