--- a/GameSquadMVC/includes/core/views/form_inscription.phtml
+++ b/GameSquadMVC/includes/core/views/form_inscription.phtml
@@ -17,31 +17,31 @@ require_once 'includes/core/globals.php';
             <h3>REJOINS LA COMMU !</h3>
             <div class="name">
                 <label for="name">Nom</label>
-                <input type="text" name="name" id="name" required>
+                <input type="text" name="name" id="name" value="<?= $unUtilisateur->getName();?>" required>
             </div>
             <div class="firstname">
                 <label for="firstname">Prénom</label>
-                <input type="text" name="firstname" id="firstname" required>
+                <input type="text" name="firstname" id="firstname" value="<?= $unUtilisateur->getFirstname();?>" required>
             </div>
             <div class="pseudo">
                 <label for="pseudo">Pseudo</label>
-                <input type="text" name="pseudo" id="pseudo" required>
+                <input type="text" name="pseudo" id="pseudo" value="<?= $unUtilisateur->getPseudo();?>" required>
             </div>
             <div class="birthday">
                 <label for="birthday">Date de naissance</label>
-                <input type="date" name="birthday" id="birthday" min="1923-01-01"  max="" required>
+                <input type="date" name="birthday" id="birthday" min="1923-01-01"  max="" value="<?= $unUtilisateur->getBirthday();?>"required>
             </div>
             <div class="email">
                 <label for="email">Email</label>
-                <input type="email" name="email" id="email" required>
+                <input type="email" name="email" id="email" value="<?= $unUtilisateur->getEmail();?>" required>
             </div>
             <div class="password">
                 <label for="password">Mot de passe</label>
-                <input type="password" name="password" id="password" required>
+                <input type="password" name="password" id="password" value="<?= $unUtilisateur->getPassword();?>"required>
             </div>
             <div class="passwordConfirm">
                 <label for="passwordConfirm">Confirmer le mot de passe</label>
-                <input type="password" name="passwordConfirm" id="passwordConfirm" required>
+                <input type="password" name="passwordConfirm" id="passwordConfirm" value="<?= $unUtilisateur->getPassword();?>"required>
             </div>
             <input type="submit" value="S'INSCRIRE !">
         </form>
