--- a/GameSquadMVC/includes/core/views/form_session.phtml
+++ b/GameSquadMVC/includes/core/views/form_session.phtml
@@ -1,7 +1,7 @@
 <?php
 ini_set('display_errors', 'on');
-require_once 'includes/core/globals.php';
 ?>
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -22,7 +22,7 @@ require 'includes/partials/page_head.phtml';
 
         <div class="titre">
             <label for="titre">Titre</label>
-            <input type="text" name="titre" id="titre" >
+            <input type="text" name="titre" id="titre" required>
         </div>
         <div class="description">
             <label for="description">Description</label>
@@ -30,32 +30,39 @@ require 'includes/partials/page_head.phtml';
         </div>
         <div class="jeu">
             <label for="jeu">Jeu</label>
-            <select name="jeu" id="jeu">
+            <select name="jeu" id="jeu" required>
                 <option value="">Choisir un jeu</option>
                 <?php
-                foreach ($lesCivilites as $civilite){
-                    if ($civilite->getId() == $unePersonne->getCivilite()->getId()){
-                        print('<option value="'.$civilite->getId().'" selected>'.$civilite->getLibelleLong().'</option>');
-                    }else{
-                        print('<option value="'.$civilite->getId().'">'.$civilite->getLibelleLong().'</option>');
-                    }
+
+                foreach ($jeux as $jeu) {
+                    echo "<option value=\"{$jeu->getId()}\">{$jeu->getNom()}</option>";
                 }
                 ?>
+
             </select>
         </div>
         <div class="plateforme">
             <label for="plateforme">Plateforme</label>
-            <select name="plateforme" id="plateforme">
+            <select name="plateforme" id="plateforme" required>
                 <option value="">Choisir une plateforme</option>
+                <?php
+                foreach ($plateformes as $plateforme) {
+                    echo "<option value=\"{$plateforme->getId()}\">{$plateforme->getNom()}</option>";
+                }
+                ?>
             </select>
         </div>
         <div class="dateDebut">
             <label for="dateDebut">Debut de la session</label>
-            <input type="date" name="date" id="date" >
+            <input type="date" name="dateDebut" id="dateDebut" required>
         </div>
         <div class="heureDebut">
             <label for="heureDebut">Heure de debut</label>
-            <input type="time" name="heureDebut" id="heureDebut" >
+            <input type="time" name="heureDebut" id="heureDebut" required >
+        </div>
+        <div class="nbJoueur">
+            <label for="nbJoueur">Nombre de joueur</label>
+            <input type="number" name="nbJoueur" id="nbJoueur" min="2" value="2" required>
         </div>
 
 
