--- a/GameSquadMVC/public/styles/styleNavbar.css
+++ b/GameSquadMVC/public/styles/styleNavbar.css
@@ -46,6 +46,7 @@ nav ul {
 }
 .burgerMenu{
     display: none;
+    z-index: 1;
     font-family: sofiaSB;
     position: absolute;
     top: 100px;
