delete session ok

--- a/GameSquadMVC/includes/partials/navbar.phtml
+++ b/GameSquadMVC/includes/partials/navbar.phtml
@@ -21,7 +21,7 @@
 
         <ul class="burgerMenu">
             <li><a href="index.php?page=user&action=profil">Mon Profil</a></li>
-            <li><a href="index.php?page=">Mes Squads</a></li>
+            <li><a href="index.php?page=user&action=squad">Mes Squads</a></li>
             <li><a href="index.php?page=user&action=logout">Se Déconnecter</a></li>
         </ul>
     </div>
