--- a/GameSquadMVC/includes/core/views/form_connexion.phtml
+++ b/GameSquadMVC/includes/core/views/form_connexion.phtml
@@ -14,15 +14,15 @@ require_once 'includes/core/globals.php';
 <body class="bodyCon">
 <main>
     <form action="" method="post">
-        <h3>CONNECTE-TOI !</h3>
+        <h3>CONNECTE-TOI</h3>
 
         <div class="email">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email" value = "" required>
         </div>
         <div class="password">
             <label for="password">Mot de passe</label>
-            <input type="password" name="password" id="password" required>
+            <input type="password" name="password" id="password" value = "" required>
         </div>
         <input type="submit" value="SE CONNECTER ">
     </form>
