--- a/GameSquadMVC/includes/core/views/form_inscription.phtml
+++ b/GameSquadMVC/includes/core/views/form_inscription.phtml
@@ -15,6 +15,18 @@ require_once 'includes/core/globals.php';
 <main>
     <form action="" method="post">
         <h3>REJOINS LA COMMU !</h3>
+        <div class="avatar">
+            <label for="avatar">Avatar</label>
+            <select name="avatar">
+                <?php foreach ($listeAvatars as $avatar) : ?>
+                    <option value="<?php echo $avatar->getId(); ?>">
+                        <?php echo $avatar->getName(); ?>
+
+                    </option>
+                <?php endforeach; ?>
+            </select>
+        </div>
+
         <div class="name">
             <label for="name">Nom</label>
             <input type="text" name="name" id="name" value="<?= htmlentities($unUtilisateur->getName(), ENT_QUOTES, 'UTF-8'); ?>" required>
