--- a/GameSquadMVC/includes/core/views/user_view.phtml
+++ b/GameSquadMVC/includes/core/views/user_view.phtml
@@ -17,47 +17,60 @@ require 'includes/partials/page_head.phtml';
 </header>
 <main>
     <div class="cardsContainer">
-    <?php
-    // on affiche les sessions proposées par tous les utilisateurs
-    $lesSessions = getAllSessions();
+        <?php
+        // on affiche les sessions proposées par tous les utilisateurs
+        $lesSessions = getAllSessions();
 
-    foreach ($lesSessions as $uneSession) {
-        $unJeu = getJeuById($uneSession->getIdjeu());
-        $unePlateforme = getPlateformeById($uneSession->getIdplateforme());
+        foreach ($lesSessions as $uneSession) {
+            //$unAvatar = getAvatarById($uneSession->getUtilisateur()->getId());
+            $unJeu = getJeuById($uneSession->getIdjeu());
+            $unePlateforme = getPlateformeById($uneSession->getIdplateforme());
+            $unUtilisateur = getUtilisateurById($uneSession->getHote()->getId());
+            $idAvatar = $unUtilisateur->getIdAvatar();
+            $unAvatar = getAvatarById($idAvatar);
+            $pathAvatar = $unAvatar->getPath();
 
-        echo '<div class="cardSession">';
-        echo '<div class="containerSession left">';
-        echo '<div class="avatarJoueur">';
-        echo '<i class="fa-solid fa-circle-user"></i>';
-        echo '</div>';
-        echo '<div class="pseudoJoueur">';
-        echo '<p>' . $uneSession->getHote()->getPseudo() . '</p>';
-        echo '</div>';
-        echo '</div>';
-        echo '<div class="containerSession">';
-        echo '<div class="presentationSession">';
-        echo '<h4>' . $uneSession->getTitre() . '</h4>';
-        echo '<p>' . $uneSession->getDescription() . '</p>';
-        echo '</div>';
-        echo '<div class="jeuSession">';
-        echo '<p>' . $unJeu. '</p>';
-        echo '<p>' . $unePlateforme . '</p>';
-        echo '</div>';
-        echo '</div>';
-        echo '<div class="containerSession right">';
-        echo '<div class="dateSession">';
-        echo '<p>' . date_format(date_create($uneSession->getDateDebut()), 'd/m/Y') . '</p>';
-        echo '<p>' . $uneSession->getHeureDebut() . '</p>';
-        echo '</div>';
-        echo '<div class="nbJoueur">';
-        echo '<p> 1/ ' . $uneSession->getNbJoueur() . '</p>';
-        echo '<button class="btn btn-primary">Rejoindre</button>';
-        echo '</div>';
-        echo '</div>';
-        echo '</div>';
-    }
-    ?>
+            echo '<div class="cardSession">';
+            echo '<div class="containerSession left">';
+            echo '<div class="user">';
+            echo '<img src=' . $pathAvatar . '  </div>';
+            echo '</div>';
+            echo '<div class="pseudoJoueur">';
+            echo '<p>' . $uneSession->getHote()->getPseudo() . '</p>';
+            echo '</div>';
+            echo '</div>';
+            echo '<div class="containerSession">';
+            echo '<div class="presentationSession">';
+            echo '<h4>' . $uneSession->getTitre() . '</h4>';
+            echo '<p>' . $uneSession->getDescription() . '</p>';
+            echo '</div>';
+            echo '<div class="jeuSession">';
+            echo '<p>' . $unJeu. '</p>';
+            echo '<p>' . $unePlateforme . '</p>';
+            echo '</div>';
+            echo '</div>';
+            echo '<div class="containerSession right">';
+            echo '<div class="dateSession">';
+            echo '<p>' . date_format(date_create($uneSession->getDateDebut()), 'd/m/Y') . '</p>';
+            echo '<p>' . $uneSession->getHeureDebut() . '</p>';
+            echo '</div>';
+            echo '<div class="nbJoueur">';
+            echo '<p> 1/ ' . $uneSession->getNbJoueur() . '</p>';
+            if (isset($_SESSION['user']) && $uneSession->getHote()->getId() == $_SESSION['user']->getId()) {
+                echo '<a href="index.php?page=session&action=update&id=' . $uneSession->getId() . '"><button class="btn btn-primary">Modifier</button></a>';
+            } else {
+                echo '<button class="btn btn-primary">Rejoindre</button>';
+            }
+            echo '</div>';
+            echo '</div>';
+            echo '</div>';
+        }
+        ?>
     </div>
+
+
+
+
 
 
 </main>
